--- a/AspCoreMVC/AspCoreMVC/Views/User/Index.cshtml
+++ b/AspCoreMVC/AspCoreMVC/Views/User/Index.cshtml
@@ -7,7 +7,7 @@
             </h1>
         </div>
         <div class="col-6 text-end">
-            <a asp-controller="" asp-action="" class="btn btn-primary">
+            <a asp-controller="User" asp-action="Add" class="btn btn-primary btn-lg">
                 Add New User
             </a>
 
