--- a/AspCoreMVC/WebRazorPages/Pages/Shared/_Layout.cshtml
+++ b/AspCoreMVC/WebRazorPages/Pages/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="Users/Index">UserRazor</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Users/Index">UserRazor</a>
                         </li>
                     </ul>
                 </div>
