--- a/AspCoreMVC/WebRazorPages/Pages/Users/Index.cshtml
+++ b/AspCoreMVC/WebRazorPages/Pages/Users/Index.cshtml
@@ -8,7 +8,7 @@
             </h1>
         </div>
         <div class="col-6 text-end">
-            <a asp-page="Users/Create" class="btn btn-primary btn-lg">
+            <a asp-page="/Users/Add" class="btn btn-primary btn-lg">
                 Add New User
             </a>
 
@@ -43,10 +43,10 @@
                         <td>@obj.UserState</td>
                         <td>
                             <div class="btn-group" role="group">
-                                <a asp-controller="Users/Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                                <a asp-page="/Users/Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
                                     <i class="bi bi-pencil"></i> Edit
                                 </a>
-                                <a asp-controller="Users/Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
+                                <a asp-page="/Users/Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
                                     <i class="bi bi-trash"></i> Delete
                                 </a>
                             </div>
