Done razor thing
prepare to move in library

--- a/AspCoreMVC/WebRazorPages/Pages/Users/Index.cshtml
+++ b/AspCoreMVC/WebRazorPages/Pages/Users/Index.cshtml
@@ -1,11 +1,12 @@
 ﻿@page
 @model WebRazorPages.Pages.Users.IndexModel
+<h1>Users Razor List</h1>
 <div class="container">
     <div class="row pt-4 pb-2">
         <div class="col-6">
-            <h1 class="text-primary">
+            @*<h1 class="text-primary">
                 Users Razor List
-            </h1>
+            </h1>*@
         </div>
         <div class="col-6 text-end">
             <a asp-page="/Users/Add" class="btn btn-primary btn-lg">
