--- a/AspCoreMVC/AspCoreMVC/Areas/Admin/Views/UserGroup/Add.cshtml
+++ b/AspCoreMVC/AspCoreMVC/Areas/Admin/Views/UserGroup/Add.cshtml
@@ -1,6 +1,6 @@
 ﻿@model UserGroupVM
 <h1>Add User Group</h1>
-<form method="post">
+<form method="post" enctype="multipart/form-data">
     <div class="border p-3 mt-4">
         <div class="row pb-2">
             <h2 class="text-primary"></h2> 
@@ -12,11 +12,17 @@
             <span asp-validation-for="UserGroup.Description" class="text-danger"></span>
         </div>
         <div class="mg-3 row p-1">
+            <label asp-for="UserGroup.MemberId" class="p-0"></label>
             <select asp-for="@Model.UserGroup.MemberId" asp-items="@Model.UserList">
                 <option disabled selected>--Select User--</option>
             </select>
-            <label asp-for="UserGroup.MemberId"  class="p-0"/>
+            <label asp-for="UserGroup.MemberId" class="p-0"/>
             <span asp-validation-for="UserGroup.MemberId" class="text-danger"></span>
+        </div>
+        <div class="mg-3 row p-1">
+            <label asp-for="UserGroup.ImageUrl" class="p-0"></label>
+            <input type="file" class="form-control text-secondary"></input>
+            
         </div>
         <div class="row">
             <div class="col-6">
@@ -35,7 +41,7 @@
 
 @section Scripts{
     @{
-        <partial name ="_ValidationScriptsPartial"/>
+    <partial name ="_ValidationScriptsPartial"/>
     }
 
 }
