--- a/AspCoreMVC/AspCoreMVC/Areas/Admin/Views/UserGroup/Edit.cshtml
+++ b/AspCoreMVC/AspCoreMVC/Areas/Admin/Views/UserGroup/Edit.cshtml
@@ -3,6 +3,7 @@
 <form method="post">
     <input asp-for="Id" hidden/>
     <input asp-for="CreatedDate" hidden/>
+    <input asp-for="MemberId" hidden/>
     <div class="border p-3 mt-4">
         <div class="row pb-2">
             <h2 class="text-primary"></h2>
