--- a/AspCoreMVC/AspCoreMVC/Areas/Admin/Views/UserGroup/Index.cshtml
+++ b/AspCoreMVC/AspCoreMVC/Areas/Admin/Views/UserGroup/Index.cshtml
@@ -7,7 +7,7 @@
             </h1>
         </div>
         <div class="col-6 text-end">
-            <a asp-controller="UserGroup" asp-action="Add" class="btn btn-primary btn-lg">
+            <a asp-controller="UserGroup" asp-action="Upadd" class="btn btn-primary btn-lg">
                 Add New User Group
             </a>
 
@@ -43,7 +43,7 @@
                         
                         <td>
                             <div class="btn-group" role="group">
-                                <a asp-controller="UserGroup" asp-action="Edit" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
+                                <a asp-controller="UserGroup" asp-action="Upadd" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
                                     <i class="bi bi-pencil"></i> Edit
                                 </a>
                                 <a asp-controller="UserGroup" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
