--- a/AspCoreMVC/AspCoreMVC/Views/Shared/_Layout.cshtml
+++ b/AspCoreMVC/AspCoreMVC/Views/Shared/_Layout.cshtml
@@ -60,6 +60,7 @@
             &copy; 2023 - AspCoreMVC - <i class="bi bi-emoji-expressionless"></i> @*<a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>*@
         </div>
     </footer>
+@*    <script src="https://cdn.tiny.cloud/1/j43u9pw8rtj3qt5utbu8wgtnndjcgnej9rr9qxahrtqn25eh/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>    // все для той же tinymce *@  
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
