--- a/AspCoreMVC/AspCoreMVC/Areas/Admin/Views/UserGroup/Delete.cshtml
+++ b/AspCoreMVC/AspCoreMVC/Areas/Admin/Views/UserGroup/Delete.cshtml
@@ -3,6 +3,7 @@
 <form method="post">
     <input asp-for="Id" hidden/>
     <input asp-for="CreatedDate" hidden/>
+    <input asp-for="ImageUrl" hidden />
     <div class="border p-3 mt-4">
         <div class="row pb-2">
             <h2 class="text-primary"></h2>
@@ -18,17 +19,24 @@
             <input asp-for="Code" disabled class="form-control"/>
             
         </div>
-        <div class="row">
+        <div class="mg-3 row p-1">
+            <div class="col-2">
+                <img src="@Model.ImageUrl" width="100%" style="border-radius:5px; border:1px solid #bf3fd9"
+            </div>
+        </div>
+        @*<div class="row">
             <div class="col-6">
 
             </div>
             <div >
 
             </div>
+        </div>*@
+        <div>
+            <a asp-controller="UserGroup" asp-action="Index" class="btn btn-secondary mt-4 btn-lg float-end" style="width:150px">
+                Back
+            </a>
+            <button type="submit" class="btn btn-danger mt-4 btn-lg float-end form-control" style="width:150px">Delete</button>
         </div>
-        <a asp-controller="UserGroup" asp-action="Index" class="btn btn-secondary mt-4 btn-lg float-end" style="width:150px">
-            Back
-        </a>
-        <button type="submit" class="btn btn-danger mt-4 btn-lg float-end form-control" style="width:150px">Delete</button>
     </div>
 </form> 
