--- a/AspCoreMVC/AspCoreMVC/Areas/Admin/Views/UserGroup/Index.cshtml
+++ b/AspCoreMVC/AspCoreMVC/Areas/Admin/Views/UserGroup/Index.cshtml
@@ -10,58 +10,28 @@
             <a asp-controller="UserGroup" asp-action="Upadd" class="btn btn-primary btn-lg">
                 Add New User Group
             </a>
-
         </div>
     </div>
-
-    <table id="tabData" class="table table-bordered table-striped" style="width:100%">
-        <thead class="text-center">
-            <tr>  
-                @*<th class="table-warning">
-                    UserGroup Description
-                </th>
-                <th class="table-primary">
-                    UserGroup Member
-                </th>
-                <th class="table-danger">
-                    UserGroup Created Date 
-                </th>
-                <th class="table-info">
-                    State
-                </th>
-                <th></th>*@
-                <th>UG desc</th>
-                <th>UG mem</th>
-                <th>UG cd</th>
-                <th>state</th>
-                
-            <tr/>
+    <table id="tabData" class="table table-bordered table-striped text-center" style="width:100%">
+        <thead>
+            <tr class="text-center">
+                <th class="table-warning text-center">User Group Description</th>
+                <th class="table-primary text-center">User Group Member</th>
+                <th class="table-danger text-center">User Group Created Date</th>
+                <th class="table-info text-center">State</th>
+                <th></th>
+                @*<th>
+                    <a asp-controller="UserGroup" asp-action="Delete" class="btn btn-primary mx-2">
+                        <i class="bg-info bi-pencil"></i> Edit
+                    </a>
+                    <a asp-controller="UserGroup" asp-action="Delete" class="btn btn-danger mx-2">
+                        <i class="bg-info bi-trash"></i> Delete
+                    </a>
+                </th>*@
+            </tr>
         </thead>
-            @*<tbody class="text-center">
-                @foreach(var obj in Model)    // больше не нужен форич тк будем выводить через data table
-                {
-                    <tr>
-                        <td>@obj.Description</td>
-                        <td>@obj.User.Login</td>
-                        <td>@obj.CreatedDate</td>
-                        <td>@obj.Code</td>
-                        
-                        <td>
-                            <div class="btn-group" role="group">
-                                <a asp-controller="UserGroup" asp-action="Upadd" asp-route-id="@obj.Id" class="btn btn-primary mx-2">
-                                    <i class="bi bi-pencil"></i> Edit
-                                </a>
-                                <a asp-controller="UserGroup" asp-action="Delete" asp-route-id="@obj.Id" class="btn btn-danger mx-2">
-                                    <i class="bi bi-trash"></i> Delete
-                                </a>
-                            </div>
-                        </td>
-                    </tr>
-                }
-            </tbody> *@
     </table>
 </div>
-
 @section Scripts{
     <script src="~/js/usergroup.js"></script>
 }
