--- a/AspCoreMVC/AspCoreMVC/Views/Shared/_Layout.cshtml
+++ b/AspCoreMVC/AspCoreMVC/Views/Shared/_Layout.cshtml
@@ -64,6 +64,7 @@
 @*    <script src="https://cdn.tiny.cloud/1/j43u9pw8rtj3qt5utbu8wgtnndjcgnej9rr9qxahrtqn25eh/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>    // все для той же tinymce *@  
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="//cdn.datatables.net/1.13.4/js/jquery.dataTables.min.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
