Added auth, and seems like raw-finished

--- a/AspCoreMVC/AspCoreMVC/Areas/Admin/Views/_ViewImports.cshtml
+++ b/AspCoreMVC/AspCoreMVC/Areas/Admin/Views/_ViewImports.cshtml
@@ -1,4 +1,8 @@
 ﻿@using AspCore
 @using AspCore.Models
 @using AspCore.Models.ViewModels
+@using AspCore.Utility
+@using Microsoft.AspNetCore.Identity
+@using AspCoreMVC.Areas.Identity
+@using AspCoreMVC.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
