--- a/AspCoreMVC/AspCoreMVC/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/AspCoreMVC/AspCoreMVC/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using AspCoreMVC.Areas.Identity
 @using AspCoreMVC.Areas.Identity.Pages
+@using AspCore.Utility
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
