--- a/AspCoreMVC/AspCoreMVC/Views/_ViewImports.cshtml
+++ b/AspCoreMVC/AspCoreMVC/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using AspCore
 @using AspCore.Models
 @using AspCore.Models.ViewModels
+@using AspCore.Utility
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
